I have made the necessary chnages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <head>
     <title> Hello new file</title>
+    <style>
+        .Paddingclass{
+            margin: 5%;
+            color: Pink;
+        }
+    </style>
 </head>
 <body>
-    <h1 style ="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"> this is the heading</h1>
-    <p> this is a paragraph</p>
+    <div class="Paddingclass">
+        <h1 style ="font-family: Verdana; font-size: 60px;"> this is the heading</h1>
+    <p style="font-family: Verdana; font-weight: 500; font-size: 20px;"> this is a paragraph</p>
+    </div>
+    
 </body>
